--- a/XJDomainLive/XJDomainLive/Classes/Home/Controller/List/XJLiveListViewController.xib
+++ b/XJDomainLive/XJDomainLive/Classes/Home/Controller/List/XJLiveListViewController.xib
@@ -20,9 +20,10 @@
             <rect key="frame" x="0.0" y="0.0" width="234" height="313"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="430" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LHV-pD-PdE">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="430" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LHV-pD-PdE">
                     <rect key="frame" x="0.0" y="0.0" width="234" height="313"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="TvM-zV-TxO"/>
                         <outlet property="delegate" destination="-1" id="cf9-5b-e2F"/>
