--- a/XJDomainLive/XJDomainLive/Classes/Home/View/List/XJListTableViewCell.xib
+++ b/XJDomainLive/XJDomainLive/Classes/Home/View/List/XJListTableViewCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="353" height="378"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="353" height="377.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="353" height="377"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pbo-ym-TGb" userLabel=" 头部">
@@ -77,7 +77,7 @@
                             <constraint firstItem="Bbs-1J-6Gc" firstAttribute="top" secondItem="KYh-4v-UB5" secondAttribute="top" id="zsR-kS-XNi"/>
                         </constraints>
                     </view>
-                    <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ozI-U1-JPi">
+                    <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar_default" translatesAutoresizingMaskIntoConstraints="NO" id="ozI-U1-JPi">
                         <rect key="frame" x="0.0" y="85" width="353" height="277"/>
                     </imageView>
                 </subviews>
