--- a/XJDomainLive/XJDomainLive/Classes/Home/Controller/Live/LiveViewController.xib
+++ b/XJDomainLive/XJDomainLive/Classes/Home/Controller/Live/LiveViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LiveViewController" customModule="XJDomainLive" customModuleProvider="target">
             <connections>
+                <outlet property="btn" destination="LKN-hz-mki" id="lTc-xO-QGZ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
